fixed height issue where godfather image would not fit its container

--- a/_sass/scaffolding.scss
+++ b/_sass/scaffolding.scss
@@ -13,8 +13,8 @@ section {
 
 }
 
-section:not(:last-child, .work) {
-	@media(min-width: 380px) {
+section:not(:last-child, .work, .what-i-do) {
+	@media(min-width: 768px) {
 		height: 100vh;
 	}
 }
