--- a/_sass/work.scss
+++ b/_sass/work.scss
@@ -114,8 +114,13 @@
 	overflow: hidden;
 	position: relative;
 
-	@media (min-width: 768px) {
+	@media (min-width: 1000px) {
 		height: 100vh;
+	}
+
+
+	@media (min-width: 768px) and (max-width: 1000px) {
+		height: 25em;
 	}
 
 	img {
